--- a/Analysis/5. SeasonalForecast.ipynb
+++ b/Analysis/5. SeasonalForecast.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As requests vary seasonally, we plan to analyze past data on the frequency and types of requests in previous years or months to identify recurring patterns or anomalies. These forecasts will enable municipalities and service departments to anticipate periods of higher demand and plan accordingly. The outcome variable used would be the number of future service requests in a specific time frame, categorised by request type."
+    "As requests vary seasonally, we plan to analyze past data on the frequency and types of requests in previous years or months to identify recurring patterns or anomalies. These forecasts will enable municipalities and service departments to anticipate periods of higher demand and plan accordingly. The outcome variable used would be the number of future service requests in a specific time frame, categorised by request type and origin"
    ]
   },
   {
