--- a/Analysis/5. SeasonalForecast.ipynb
+++ b/Analysis/5. SeasonalForecast.ipynb
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
        "      <th>Type</th>\n",
        "      <th>Model</th>\n",
        "      <th>Mean RMSE</th>\n",
-       "      <th>Better than Baseline</th>\n",
+       "      <th>Better than Baseline?</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1871,22 +1871,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Grouping          Type          Model   Mean RMSE  Better than Baseline\n",
-       "0    Season  Neighborhood         Linear   17.083030                  True\n",
-       "1    Season  Neighborhood  Decision Tree   28.616783                 False\n",
-       "2    Season  Neighborhood        XGBoost   17.874128                  True\n",
-       "3    Season    Department         Linear  289.719776                  True\n",
-       "4    Season    Department  Decision Tree  625.804840                 False\n",
-       "5    Season    Department        XGBoost  483.813160                 False\n",
-       "6     Month  Neighborhood         Linear  109.157647                 False\n",
-       "7     Month  Neighborhood  Decision Tree  212.679035                 False\n",
-       "8     Month  Neighborhood        XGBoost  120.618474                 False\n",
-       "9     Month    Department         Linear  109.157647                  True\n",
-       "10    Month    Department  Decision Tree  212.679035                 False\n",
-       "11    Month    Department        XGBoost  120.618474                  True"
+       "   Grouping          Type          Model   Mean RMSE  Better than Baseline?\n",
+       "0    Season  Neighborhood         Linear   17.083030                   True\n",
+       "1    Season  Neighborhood  Decision Tree   28.616783                  False\n",
+       "2    Season  Neighborhood        XGBoost   17.874128                   True\n",
+       "3    Season    Department         Linear  289.719776                   True\n",
+       "4    Season    Department  Decision Tree  625.804840                  False\n",
+       "5    Season    Department        XGBoost  483.813160                  False\n",
+       "6     Month  Neighborhood         Linear  109.157647                  False\n",
+       "7     Month  Neighborhood  Decision Tree  212.679035                  False\n",
+       "8     Month  Neighborhood        XGBoost  120.618474                  False\n",
+       "9     Month    Department         Linear  109.157647                   True\n",
+       "10    Month    Department  Decision Tree  212.679035                  False\n",
+       "11    Month    Department        XGBoost  120.618474                   True"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,18 +1913,18 @@
     "mean_rmse = {key: np.mean(value) for key, value in rmse_scores.items()}\n",
     "# Create a DataFrame for better visualization\n",
     "rmse_summary = pd.DataFrame([\n",
-    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Neighborhood Season'], 'Better than Baseline': mean_rmse['Linear Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
-    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Neighborhood Season'], 'Better than Baseline': mean_rmse['Decision Tree Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
-    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Neighborhood Season'], 'Better than Baseline': mean_rmse['XGBoost Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
-    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Department Season'], 'Better than Baseline': mean_rmse['Linear Department Season'] < baseline_rmse_season_dept},\n",
-    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Department Season'], 'Better than Baseline': mean_rmse['Decision Tree Department Season'] < baseline_rmse_season_dept},\n",
-    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Department Season'], 'Better than Baseline': mean_rmse['XGBoost Department Season'] < baseline_rmse_season_dept},\n",
-    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Neighborhood Month'], 'Better than Baseline': mean_rmse['Linear Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
-    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Neighborhood Month'], 'Better than Baseline': mean_rmse['Decision Tree Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
-    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Neighborhood Month'], 'Better than Baseline': mean_rmse['XGBoost Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
-    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Department Month'], 'Better than Baseline': mean_rmse['Linear Department Month'] < baseline_rmse_month_dept},\n",
-    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Department Month'], 'Better than Baseline': mean_rmse['Decision Tree Department Month'] < baseline_rmse_month_dept},\n",
-    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Department Month'], 'Better than Baseline': mean_rmse['XGBoost Department Month'] < baseline_rmse_month_dept}\n",
+    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Neighborhood Season'], 'Better than Baseline?': mean_rmse['Linear Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
+    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Neighborhood Season'], 'Better than Baseline?': mean_rmse['Decision Tree Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
+    "    {'Grouping': 'Season', 'Type': 'Neighborhood', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Neighborhood Season'], 'Better than Baseline?': mean_rmse['XGBoost Neighborhood Season'] < baseline_rmse_season_neighborhood},\n",
+    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Department Season'], 'Better than Baseline?': mean_rmse['Linear Department Season'] < baseline_rmse_season_dept},\n",
+    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Department Season'], 'Better than Baseline?': mean_rmse['Decision Tree Department Season'] < baseline_rmse_season_dept},\n",
+    "    {'Grouping': 'Season', 'Type': 'Department', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Department Season'], 'Better than Baseline?': mean_rmse['XGBoost Department Season'] < baseline_rmse_season_dept},\n",
+    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Neighborhood Month'], 'Better than Baseline?': mean_rmse['Linear Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
+    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Neighborhood Month'], 'Better than Baseline?': mean_rmse['Decision Tree Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
+    "    {'Grouping': 'Month', 'Type': 'Neighborhood', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Neighborhood Month'], 'Better than Baseline?': mean_rmse['XGBoost Neighborhood Month'] < baseline_rmse_month_neighborhood},\n",
+    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'Linear', 'Mean RMSE': mean_rmse['Linear Department Month'], 'Better than Baseline?': mean_rmse['Linear Department Month'] < baseline_rmse_month_dept},\n",
+    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'Decision Tree', 'Mean RMSE': mean_rmse['Decision Tree Department Month'], 'Better than Baseline?': mean_rmse['Decision Tree Department Month'] < baseline_rmse_month_dept},\n",
+    "    {'Grouping': 'Month', 'Type': 'Department', 'Model': 'XGBoost', 'Mean RMSE': mean_rmse['XGBoost Department Month'], 'Better than Baseline?': mean_rmse['XGBoost Department Month'] < baseline_rmse_month_dept}\n",
     "])\n",
     "\n",
     "rmse_summary"
